Opened 4 years ago

Closed 3 years ago

#16980 closed bug (fixed)

DiskUsage window may open off-screen after switching to a lower resolution display (easy)

Reported by: bruno Owned by: nobody
Priority: normal Milestone: R1/beta4
Component: Applications/DiskUsage Version: R1/beta2
Keywords: Cc:
Blocked By: Blocking:
Platform: x86

Description (last modified by pulkomandy)

DiskUsage save its window position. If you use a large display and move it towards the bottom or right, and then switch to a smaller display, the window may end up opening off-screen and invisible on the next time it is run.

This can be fixed by adding a call to BWindow::MoveOnScreen after showing the window.

Change History (5)

comment:1 by bruno, 4 years ago

Just found out it was offscreen the DiskUsage window. (offset) It is working just fine. But if you move it on a bigger screen then you just cannot access it on a smal laptop screen.

This one can be closed sorry

comment:2 by madmax, 4 years ago

Resolution: invalid
Status: newclosed

comment:3 by pulkomandy, 4 years ago

Description: modified (diff)
Resolution: invalid
Status: closedreopened
Summary: DiskUsage does not start on Haiku 32bit nightly hrev.55114DiskUsage window may open off-screen after switching to a lower resolution display (easy)

comment:5 by korli, 3 years ago

Milestone: UnscheduledR1/beta4
Resolution: fixed
Status: reopenedclosed

Applied in hrev56005

Note: See TracTickets for help on using tickets.