DiskUsage: Ensure window opens on screen

* Use BWindow::MoveOnScreen to center the window if it opens outside of the screen frame.
* Fixes #16980.

Change-Id: Icf777aea70ed0e91f57bcd425b3dddbdcb7600df